# slack-time-cmd

./: .envrc-example  Dockerfile  LICENSE  README.md  docker-compose.yml  schema.sql  slack-time-cmd.cabal
app/: Main.hs
src/: Db.hs  Lib.hs  Slack.hs  Time.hs
