name:                slack-time-cmd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/squaresurf/slack-time-cmd#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Paul Searles
maintainer:          daniel.paul.searles@gmail.com
copyright:           MIT
category:            Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Db
                     , Lib
                     , Slack
                     , Time
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , http-api-data
                     , http-conduit
                     , postgresql-simple
                     , servant-server
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

executable slack-time-cmd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , slack-time-cmd
                     , text
  default-language:    Haskell2010

test-suite slack-time-cmd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slack-time-cmd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/squaresurf/slack-time-cmd
